:zap: add translation

--- a/src/locales/en/common.json
+++ b/src/locales/en/common.json
@@ -1,3 +1,68 @@
 {
-    "language": "Language"
+    "language": "Language",
+    "home": "Home",
+    "about": "About",
+    "contact": "Contact",
+    "resume": "Resume",
+    "portfolio": "Portfolio",
+    "footer": "Ali Oliaee | created by",
+    "and": "and",
+    "name": "Ali",
+    "family": "Oliaee",
+    "home-description" : "Front-end developer and a codeholic person",
+    "about-title": "About Me",
+    "Hi": "Hi",
+    "about-description" : "My name is Ali Oliaee and I am studying for a bachelor's degree in computer engineering at Qiet University.I was born at dec 20, 2001.I'm interested messing with computers and tech stuff. The purpose of this portfolio is the presentation of the personal projects I have worked on, and the skills I have acquired over the years.",
+    "games": "Video games",
+    "music": "Music",
+    "movies": "Movies",
+    "puzzle": "Puzzles",
+    "open-source": "Open source",
+    "walking": "Walking",
+    "interests": "Interests",
+    "contact-text":"if you have any questions or criticism, Do not delay and",
+    "contact-me":"contact me",
+    "contact-description": "you can contact me with this ways :)",
+    "email": "Email",
+    "call": "Call",
+    "location": "Location",
+    "my-location": "Iran, Mashhad",
+    "social-media": "Social Media",
+    "phone-number": "+989105753695",
+    "phone-book": "Phone Book",
+    "phone-book-description": "A phone book application that allows users to add, edit, and delete contacts. crud on sql using node js and help ant design library for ui.",
+    "signup-page": "Signup Page",
+    "signup-page-description": "A signup page for a user to signup and create an account, a challenge from frontend mentor website. created by react and ant design library.",
+    "portfolio-description": "My portfolio website, created by react and MUI library. internationalized with i18next.",
+    "calculator": "Calculator",
+    "calculator-description": "A simple calculator that I made for fun contains oop javascript and neumorphism design.",
+    "news-site": "News website",
+    "news-site-description": "A news website with signup and login form, based on typescript, react. designed by ant design library and get content from fakerjs.",
+    "demo":"Demo",
+    "source-code": "Source code",
+    "qr-card": "QR Card",
+    "qr-card-description": "It's a challenge from frontend mentor website, a simple preview of QR card.",
+    "instagram-ui": "Instagram-UI",
+    "instagram-ui-description": "Just a simple UI that I made for Instagram. images are not loaded because Fakerjs library broke down. :(",
+    "ai-page": "AI Page",
+    "ai-page-description": "My first project that I uploaded to GitHub. It is a simple page that has information about artificial intelligence.",
+    "digital-clock": "Digital Clock",
+    "clock-description": "Just a simple clock with extra feature :)",
+    "nft-card": "NFT Card",
+    "nft-description": "It's a challenge from frontend mentor website, a simple preview of NFT card.",
+    "advice-generator": "Advice Generator App",
+    "advice-description": "It's a challenge from frontend mentor website, that generates random advice for users.with the help of API.",
+    "love-page": "Love Page",
+    "love-page-description": "A simple HTML document that allows users to add their own messages to the page.",
+    "skills":"Skills",
+    "experience": "Experience",
+    "experience-description": "From nov 22, 2021 to march 20, 2022, I worked at Arash Web Company as a frontend intern, During this time I have participated in several projects and also learned the main topics of the clean code book and met good friends and colleagues :)",
+    "education": "Education",
+    "education-description": "I am currently an undergraduate computer engineering student and have been studying since 2019.",
+    "personality":"Personality",
+    "trustworthy":"Trustworthy",
+    "teamwork":"Teamwork",
+    "learner":"Learner",
+    "listener": "Listener",
+    "learn-more": "Learn more..."
 }
