--- a/src/locales/fa/common.json
+++ b/src/locales/fa/common.json
@@ -12,7 +12,7 @@
     "home-description" : "توسعه دهنده فرانت اند",
     "about-title": "درباره من",
     "Hi": "سلام",
-    "about-description" : "علی علیایی هستم، متولد آذر ۱۳۸۰و دانشجوی رشته مهندسی کامپیوتر دانشگاه صنعتی قوچان، هدفم از ساخت این وبسایت صرفا جمع کردن نمونه کارهام و نشون دادن چیزاییه که توی این چند سال یاد گرفتم.",
+    "about-description" : "علی علیایی هستم، متولد آذر ۱۳۸۰ و دانشجوی رشته مهندسی کامپیوتر دانشگاه صنعتی قوچان، هدفم از ساخت این وبسایت صرفا جمع کردن نمونه کارهام و نشون دادن چیزاییه که توی این چند سال یاد گرفتم.",
     "games": "بازی ویدئویی",
     "music": "موسیقی",
     "movies": "فیلم",
@@ -20,7 +20,7 @@
     "open-source": "متن باز",
     "walking": "پیاده روی",
     "interests": "علاقه مندی ها",
-    "contact-text":"هر سوال یا پیشنهاد یا انتفادی که دارید، خوشحال میشم که بشنوم.",
+    "contact-text":"هر سوال یا پیشنهاد یا انتقادی که دارید، خوشحال میشم که بشنوم.",
     "contact-me": "تماس با من",
     "contact-description": "میتونی از طریق راه های زیر باهم تماس بگیری :)",
     "email": "ایمیل",
@@ -28,7 +28,7 @@
     "location": "محل سکونت",
     "my-location": "مشهد",
     "social-media": "شبکه های اجتماعی",
-    "phone-number": "+۹۸۹۱۰۵۷۵۳۶۹۵",
+    "phone-number": "۹۸۹۱۰۵۷۵۳۶۹۵+",
     "phone-book": "دفترچه تلفن",
     "phone-book-description": "یه دفترچه تلفن ساده که قابلیت حذف و اضافه و ویرایش مخاطب ها رو داره، ساخته شده توسط nodejs, antd, mysql",
     "demo":"پیش نمایش",
@@ -56,14 +56,14 @@
     "love-page-description": "یه سند html ساده که با کمکش میتونین کسایی که دوست دارین رو خوشحال کنید.",
     "skills": "مهارت ها",
     "experience":"تجربه",
-    "experience-description": "از ۱ آذر ۱۴۰۰ تا ۲۹ اسفند ۱۴۰۰ به عنوان کارآموز فرانت اند در شرکت آرش وب مشغول به کار بودم درطول این مدت توی چند پروژه شرکت داشتم و همچنبن کتاب کلین کد رو خوندم و در کنارش دوستان و همکاران خیلی خوبی پیدا کردم :)",
+    "experience-description": "از ۱ آذر ۱۴۰۰ تا ۲۹ اسفند ۱۴۰۰ به عنوان کارآموز فرانت اند در شرکت آرش وب مشغول به کار بودم درطول این مدت توی چند پروژه شرکت داشتم و همچنین کتاب کلین کد رو خوندم و در کنارش دوستان و همکاران خیلی خوبی پیدا کردم :)",
     "education": "تحصیلات",
     "education-description": "در حال حاضر دانشجوی رشته مهندسی کامپیوتر دانشگاه صنعتی قوچان هستم.",
     "personality": "شخصیت",
     "trustworthy":"قابل اطمینان",
     "teamwork":"کارتیمی",
     "learner":"به دنبال یادگیری",
-    "listener":"شنونده",
+    "listener":"شنونده خوب",
     "learn-more": "موارد بیشتر..."
 
 }
