--- a/src/locales/fa/common.json
+++ b/src/locales/fa/common.json
@@ -64,6 +64,9 @@
     "teamwork":"کارتیمی",
     "learner":"به دنبال یادگیری",
     "listener":"شنونده خوب",
-    "learn-more": "موارد بیشتر..."
-
+    "learn-more": "موارد بیشتر...",
+    "Download-cv": "دانلود رزومه",
+    "404": "۴۰۴",
+    "404-description": "صفحه یافت نشد",
+    "back-to-home": "بازگشت به صفحه اصلی"
 }
