--- a/src/locales/en/common.json
+++ b/src/locales/en/common.json
@@ -9,10 +9,10 @@
     "and": "and",
     "name": "Ali",
     "family": "Oliaee",
-    "home-description" : "Front-end developer and a codeholic person",
+    "home-description": "Front-end developer and a codeholic person",
     "about-title": "About Me",
     "Hi": "Hi",
-    "about-description" : "My name is Ali Oliaee and I am studying for a bachelor's degree in computer engineering at Qiet University.I was born at dec 20, 2001.I'm interested messing with computers and tech stuff. The purpose of this portfolio is the presentation of the personal projects I have worked on, and the skills I have acquired over the years.",
+    "about-description": "My name is Ali Oliaee and I am studying for a bachelor's degree in computer engineering at Qiet University.I was born at dec 20, 2001.I'm interested messing with computers and tech stuff. The purpose of this portfolio is the presentation of the personal projects I have worked on, and the skills I have acquired over the years.",
     "games": "Video games",
     "music": "Music",
     "movies": "Movies",
@@ -20,8 +20,8 @@
     "open-source": "Open source",
     "walking": "Walking",
     "interests": "Interests",
-    "contact-text":"if you have any questions or criticism, Do not delay and",
-    "contact-me":"contact me",
+    "contact-text": "if you have any questions or criticism, Do not delay and",
+    "contact-me": "contact me",
     "contact-description": "you can contact me with this ways :)",
     "email": "Email",
     "call": "Call",
@@ -38,7 +38,7 @@
     "calculator-description": "A simple calculator that I made for fun contains oop javascript and neumorphism design.",
     "news-site": "News website",
     "news-site-description": "A news website with signup and login form, based on typescript, react. designed by ant design library and get content from fakerjs.",
-    "demo":"Demo",
+    "demo": "Demo",
     "source-code": "Source code",
     "qr-card": "QR Card",
     "qr-card-description": "It's a challenge from frontend mentor website, a simple preview of QR card.",
@@ -54,19 +54,21 @@
     "advice-description": "It's a challenge from frontend mentor website, that generates random advice for users.with the help of API.",
     "love-page": "Love Page",
     "love-page-description": "A simple HTML document that allows users to add their own messages to the page.",
-    "skills":"Skills",
+    "skills": "Skills",
     "experience": "Experience",
     "experience-description": "From nov 22, 2021 to march 20, 2022, I worked at Arash Web Company as a frontend intern, During this time I have participated in several projects and also learned the main topics of the clean code book and met good friends and colleagues :)",
     "education": "Education",
     "education-description": "I am currently an undergraduate computer engineering student and have been studying since 2019.",
-    "personality":"Personality",
-    "trustworthy":"Trustworthy",
-    "teamwork":"Teamwork",
-    "learner":"Learner",
+    "personality": "Personality",
+    "trustworthy": "Trustworthy",
+    "teamwork": "Teamwork",
+    "learner": "Learner",
     "listener": "Listener",
     "learn-more": "Learn more...",
     "Download-cv": "Download my cv",
     "404": "404",
     "404-description": "The page you are looking for is not found.",
-    "back-to-home": "Back to home"
+    "back-to-home": "Back to home",
+    "learn-less": "Learn less",
+    "show-all": "Show all"
 }
