add rare project

--- a/src/locales/fa/common.json
+++ b/src/locales/fa/common.json
@@ -54,6 +54,8 @@
     "advice-description": "یکی از چلنج های سایت frontend mentor، یسری پیشنهاد تصادفی به کاربر نمایش میده با کمک API.",
     "love-page": "صفحه عشق",
     "love-page-description": "یه سند html ساده که با کمکش میتونین کسایی که دوست دارین رو خوشحال کنید.",
+    "rare-shop": "فروشگاه غیرمتمرکز",
+    "rare-shop-description": "یه dapp که میتونین اجناس مورد نظر خودتون رو با کریپتوکارنسی بخرید و با متامسک (کیف پول اتریوم) خودتون پرداخت کنید. تکنولوژی های استفاده شده: react, redux, etherjs",
     "skills": "مهارت ها",
     "experience": "تجربه",
     "experience-description": "از ۱ آذر ۱۴۰۰ تا ۲۹ اسفند ۱۴۰۰ به عنوان کارآموز فرانت اند در شرکت آرش وب مشغول به کار بودم درطول این مدت توی چند پروژه شرکت داشتم و همچنین کتاب کلین کد رو خوندم و در کنارش دوستان و همکاران خیلی خوبی پیدا کردم :)",
