--- a/src/locales/en/common.json
+++ b/src/locales/en/common.json
@@ -54,6 +54,8 @@
     "advice-description": "It's a challenge from frontend mentor website, that generates random advice for users.with the help of API.",
     "love-page": "Love Page",
     "love-page-description": "A simple HTML document that allows users to add their own messages to the page.",
+    "rare-shop": "Rare Shop",
+    "rare-shop-description": "A Dapp that allows users to buy stuff with crypto and it's connect to your metamask account. most used technologies are react, redux, etherjs.",
     "skills": "Skills",
     "experience": "Experience",
     "experience-description": "From nov 22, 2021 to march 20, 2022, I worked at Arash Web Company as a frontend intern, During this time I have participated in several projects and also learned the main topics of the clean code book and met good friends and colleagues :)",
