--- a/src/locales/fa/common.json
+++ b/src/locales/fa/common.json
@@ -72,5 +72,15 @@
     "404-description": "صفحه یافت نشد",
     "back-to-home": "بازگشت به صفحه اصلی",
     "learn-less": "نمایش کمتر",
-    "show-all": "نمایش همه"
+    "show-all": "نمایش همه",
+    "arashweb-date": "۱۴۰۰/۰۹/۰۱ - ۱۴۰۰/۱۲/۲۹",
+    "felixin-intern-date": "۱۴۰۱/۰۶/۲۱ - ۱۴۰۱/۰۸/۳۰",
+    "fulltime-remote": "دورکاری تمام وقت",
+    "felixin-hire-date": "۱۴۰۱/۰۹/۰۱ - حال",
+    "felixin-hire-description": "بعد از گذراندن دوره کارآموزی تصمیم به سروکله زدن با پروژه های بین المللی و حل چالش ها در شرکت فلکسین شدم.",
+    "intern": "کارآموزی",
+    "arashweb": "آرش وب",
+    "felixin":"فلکسین", 
+    "arashweb-description": "از ۱ آذر ۱۴۰۰ تا ۲۹ اسفند ۱۴۰۰ به عنوان کارآموز فرانت اند در شرکت آرش وب مشغول به کار بودم درطول این مدت توی چند پروژه شرکت داشتم و همچنین کتاب کلین کد رو خوندم و در کنارش دوستان و همکاران خیلی خوبی پیدا کردم :)",
+    "felixin-intern-description": "در این مدت من به عنوان کارآموز توسعه اپ های موبایل با ری اکت نیتیو مشغول کار بودم و با روند توسعه اپ های موبایل و تفاوت های بین سیستم عامل های موبایل بیشتر آشنا شدم،‌ از همه مهمتر فرهنگ دورکاری رو از نزدیک لمس کردم."
 }
