--- a/src/locales/fa/common.json
+++ b/src/locales/fa/common.json
@@ -82,5 +82,8 @@
     "arashweb": "آرش وب",
     "felixin":"فلکسین", 
     "arashweb-description": "از ۱ آذر ۱۴۰۰ تا ۲۹ اسفند ۱۴۰۰ به عنوان کارآموز فرانت اند در شرکت آرش وب مشغول به کار بودم درطول این مدت توی چند پروژه شرکت داشتم و همچنین کتاب کلین کد رو خوندم و در کنارش دوستان و همکاران خیلی خوبی پیدا کردم :)",
-    "felixin-intern-description": "در این مدت من به عنوان کارآموز توسعه اپ های موبایل با ری اکت نیتیو مشغول کار بودم و با روند توسعه اپ های موبایل و تفاوت های بین سیستم عامل های موبایل بیشتر آشنا شدم،‌ از همه مهمتر فرهنگ دورکاری رو از نزدیک لمس کردم."
+    "felixin-intern-description": "در این مدت من به عنوان کارآموز توسعه اپ های موبایل با ری اکت نیتیو مشغول کار بودم و با روند توسعه اپ های موبایل و تفاوت های بین سیستم عامل های موبایل بیشتر آشنا شدم،‌ از همه مهمتر فرهنگ دورکاری رو از نزدیک لمس کردم.",
+    "parents-app": "اپلیکیشن والدین",
+    "parents-app-description": "این اپلیکیشن برای اطمینان والدین از سلامت نوزادشان با ری اکت نیتیو طراحی شده است. این اپلیکیشن در حال حاضر در گوگل پلی در دسترس است."
+
 }
