--- a/src/locales/en/common.json
+++ b/src/locales/en/common.json
@@ -49,7 +49,7 @@
     "rare-shop": "Rare Shop",
     "rare-shop-description": "A Dapp that allows users to buy stuff with crypto and it's connect to your metamask account. most used technologies are react, redux, etherjs.",
     "skills": "Skills",
-    "experience": "Experience",
+    "experience": "Experiences",
     "arashweb": "Arashweb",
     "arashweb-description": "I worked at ArashWeb Company as a frontend intern, During this time I have participated in several projects and also learned the main topics of the clean code book and met good friends and colleagues :)",
     "felixin":"Felixin",
