--- a/src/locales/fa/common.json
+++ b/src/locales/fa/common.json
@@ -47,7 +47,7 @@
     "rare-shop": "فروشگاه غیرمتمرکز",
     "rare-shop-description": "یه dapp که میتونین اجناس مورد نظر خودتون رو با کریپتوکارنسی بخرید و با متامسک (کیف پول اتریوم) خودتون پرداخت کنید. تکنولوژی های استفاده شده: react, redux, etherjs",
     "skills": "مهارت ها",
-    "experience": "تجربه",
+    "experience": "تجربه ها",
     "experience-description": "از ۱ آذر ۱۴۰۰ تا ۲۹ اسفند ۱۴۰۰ به عنوان کارآموز فرانت اند در شرکت آرش وب مشغول به کار بودم درطول این مدت توی چند پروژه شرکت داشتم و همچنین کتاب کلین کد رو خوندم و در کنارش دوستان و همکاران خیلی خوبی پیدا کردم :)",
     "education": "تحصیلات",
     "education-description": "در حال حاضر دانشجوی رشته مهندسی کامپیوتر دانشگاه صنعتی قوچان هستم.",
